--- a/FormulaSheetTex.tex
+++ b/FormulaSheetTex.tex
@@ -7,11 +7,15 @@
 
 \usepackage[english]{babel}
 
-\begin{document}
+\pagestyle{myheadings}
+\markright{Henrik Lia \hfill Fall 2020}
+\pagenumbering{gobble}
 
+\begin{document}
 \begin{center}
     \Large
     \textbf{TEP4156 Formula sheet}
+    \vspace{0.5cm}
 \end{center}
 
 \begin{multicols}{2}
