--- a/TEP4156FormulaSheet.tex
+++ b/TEP4156FormulaSheet.tex
@@ -7,6 +7,8 @@
 
 \usepackage[english]{babel}
 
+\usepackage[margin=18mm, tmargin=30mm]{geometry}
+
 \pagestyle{myheadings}
 \markright{Henrik Lia \hfill Fall 2020}
 \pagenumbering{gobble}
