Fix stefans bug in Orr-Sommerfeld

--- a/TEP4156FormulaSheet.tex
+++ b/TEP4156FormulaSheet.tex
@@ -191,11 +191,11 @@
     \end{gather*}
     \begin{gather*}
         \textbf{\small Orr-Sommerfeld equation} \\
-        (U - c)(v''-\alpha v) - U''v + \frac{i\nu}{\alpha}(v''''-2\alpha^2v''+\alpha^4v) = 0
+        (U - c)(v''-\alpha^2 v) - U''v + \frac{i\nu}{\alpha}(v''''-2\alpha^2v''+\alpha^4v) = 0
     \end{gather*}
     \begin{gather*}
         \textbf{\small Inviscid Orr-Sommerfeld equation} \\
-        (U - c)(v''-\alpha^2 v) - U''v = 0 \quad \text{($\alpha^2$ ?)}
+        (U - c)(v''-\alpha^2 v) - U''v = 0
     \end{gather*}
 \end{multicols*}
 
