Add pdf to gitignore

--- a/TEP4156FormulaSheet.tex
+++ b/TEP4156FormulaSheet.tex
@@ -191,7 +191,7 @@
         (U - c)(v''-\alpha^2 v) - U''v + \frac{i\nu}{\alpha}(v''''-2\alpha^2v''+\alpha^4v) = 0
     \end{gather*}
     \begin{gather*}
-        \textbf{\small Inviscid Orr-Sommerfeld equation} \\
+        \textbf{\small Inviscid OS (Rayleigh) equation} \\
         (U - c)(v''-\alpha^2 v) - U''v = 0
     \end{gather*}
 \end{multicols*}
