--- a/TEP4156FormulaSheet.tex
+++ b/TEP4156FormulaSheet.tex
@@ -112,6 +112,7 @@
         \psi(x,y) = \sqrt{\frac{2}{m+1}\nu x U}f(\eta)
     \end{gather*}
     \begin{gather*}
+        \textbf{\small Similarity variable} \\
         \eta = y \sqrt{\frac{m+1}{2}\frac{U}{\nu x}}
     \end{gather*}
     \begin{gather*}
