--- a/TEP4156FormulaSheet.tex
+++ b/TEP4156FormulaSheet.tex
@@ -109,6 +109,7 @@
         \theta = \int_0^\infty \frac{u}{U}\left( 1 - \frac{u}{U} \right)dy
     \end{gather*}
     \begin{gather*}
+        \textbf{\small Stream function} \\
         \psi(x,y) = \sqrt{\frac{2}{m+1}\nu x U}f(\eta)
     \end{gather*}
     \begin{gather*}
