Add inviscid stability theorem

--- a/TEP4156FormulaSheet.tex
+++ b/TEP4156FormulaSheet.tex
@@ -196,6 +196,14 @@
         \textbf{\small Inviscid OS (Rayleigh) equation} \\
         (U - c)(v''-\alpha^2 v) - U''v = 0
     \end{gather*}
+    \begin{gather*}
+        \textbf{\small Inviscid stability theorem} \\
+        \text{Condition 1: $U''(y_p) = 0$ } \\
+        \text{Condition 2: $U''\cdot(U-U(y_p)) < 0$ somewhere } \\
+        \text{We know almost 100\% that the flow is instable}\\ 
+        \text{if both conditions are met. If not, we can not draw} \\
+        \text{any conlusions.}
+    \end{gather*}
 \end{multicols*}
 
 TODO: Add Einstein notation, kronecker delta, levi civita, $\sigma '$, Couette flow?, Bessel functions, $\lambda$, Prandtl og gutta
