Change formulation of mass conservation

--- a/TEP4156FormulaSheet.tex
+++ b/TEP4156FormulaSheet.tex
@@ -46,7 +46,7 @@
     \end{gather*}
     \begin{gather*}
         \textbf{\small Mass conservation} \\
-        \frac{D\rho}{Dt} + \rho \vec{\nabla} \cdot \vec{u} = 0
+        \frac{D\rho}{Dt} + \vec{\nabla} \cdot (\rho \vec{u}) = 0
     \end{gather*}
     \begin{gather*}
         \textbf{\small Momentum conservation} \\
