--- a/TEP4156FormulaSheet.tex
+++ b/TEP4156FormulaSheet.tex
@@ -53,7 +53,7 @@
         \rho \frac{Du_i}{Dt} = \derivative{ \sigma_{ij}}{x_j} + \rho f_i
     \end{gather*}
     \begin{gather*}
-        \textbf{\small Energy conservtion} \\
+        \textbf{\small Energy conservation} \\
         \rho \frac{DE}{Dt} = \derivative{}{x_j}(\sigma_{ij} u_i) + \rho f_i u_i - \derivative{ q_k}{x_k}
     \end{gather*}
     \begin{gather*}
@@ -169,6 +169,10 @@
         \textbf{\small Laminar boundary layer} \\
         \delta \ll L, \\
         \text{Re} \gg 1
+    \end{gather*}
+    \begin{gather*}
+        \textbf{\small Stream function} \\
+        u = \derivative{\psi}{y}, \quad v = \derivative{\psi}{x}
     \end{gather*}
 \end{multicols*}
 \begin{center}
