--- a/TEP4156FormulaSheet.tex
+++ b/TEP4156FormulaSheet.tex
@@ -176,7 +176,7 @@
     \end{gather*}
     \begin{gather*}
         \textbf{\small Stream function} \\
-        u = \derivative{\psi}{y}, \quad v = \derivative{\psi}{x}
+        u = \derivative{\psi}{y}, \quad v = -\derivative{\psi}{x}
     \end{gather*}
 \end{multicols*}
 
